improve ga-multisig example and tests